--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="grid_3.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" href="assets/css_2.png">
     <title>Grid CSS#3</title>
 </head>
